src/snapshots/gart__scanner__test__fib_snapshot.snap
---
source: src/scanner.rs
expression: tokens
---
[
    Token {
        token_type: Var,
        start: 0,
        length: 3,
        line: 1,
    },
    Token {
        token_type: Identifier,
        start: 4,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Equal,
        start: 6,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Number,
        start: 8,
        length: 1,
        line: 1,
    },
    Token {
        token_type: NewLine,
        start: 9,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Var,
        start: 10,
        length: 3,
        line: 2,
    },
    Token {
        token_type: Identifier,
        start: 14,
        length: 1,
        line: 2,
    },
    Token {
        token_type: Equal,
        start: 16,
        length: 1,
        line: 2,
    },
    Token {
        token_type: Number,
        start: 18,
        length: 1,
        line: 2,
    },
    Token {
        token_type: NewLine,
        start: 19,
        length: 1,
        line: 2,
    },
    Token {
        token_type: Var,
        start: 20,
        length: 3,
        line: 3,
    },
    Token {
        token_type: Identifier,
        start: 24,
        length: 1,
        line: 3,
    },
    Token {
        token_type: Equal,
        start: 26,
        length: 1,
        line: 3,
    },
    Token {
        token_type: Number,
        start: 28,
        length: 1,
        line: 3,
    },
    Token {
        token_type: NewLine,
        start: 29,
        length: 1,
        line: 3,
    },
    Token {
        token_type: Var,
        start: 30,
        length: 3,
        line: 4,
    },
    Token {
        token_type: Identifier,
        start: 34,
        length: 1,
        line: 4,
    },
    Token {
        token_type: NewLine,
        start: 35,
        length: 1,
        line: 4,
    },
    Token {
        token_type: While,
        start: 37,
        length: 5,
        line: 6,
    },
    Token {
        token_type: Identifier,
        start: 43,
        length: 1,
        line: 6,
    },
    Token {
        token_type: EqualEqual,
        start: 45,
        length: 2,
        line: 6,
    },
    Token {
        token_type: Null,
        start: 48,
        length: 4,
        line: 6,
    },
    Token {
        token_type: Or,
        start: 53,
        length: 2,
        line: 6,
    },
    Token {
        token_type: Identifier,
        start: 56,
        length: 1,
        line: 6,
    },
    Token {
        token_type: Less,
        start: 58,
        length: 1,
        line: 6,
    },
    Token {
        token_type: Number,
        start: 60,
        length: 1,
        line: 6,
    },
    Token {
        token_type: Colon,
        start: 61,
        length: 1,
        line: 6,
    },
    Token {
        token_type: NewLine,
        start: 62,
        length: 1,
        line: 6,
    },
    Token {
        token_type: Indent,
        start: 63,
        length: 2,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 65,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Equal,
        start: 67,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 69,
        length: 6,
        line: 7,
    },
    Token {
        token_type: LeftParen,
        start: 75,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 76,
        length: 5,
        line: 7,
    },
    Token {
        token_type: LeftParen,
        start: 81,
        length: 1,
        line: 7,
    },
    Token {
        token_type: String,
        start: 82,
        length: 18,
        line: 7,
    },
    Token {
        token_type: RightParen,
        start: 100,
        length: 1,
        line: 7,
    },
    Token {
        token_type: RightParen,
        start: 101,
        length: 1,
        line: 7,
    },
    Token {
        token_type: NewLine,
        start: 102,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Dedent,
        start: 107,
        length: 0,
        line: 10,
    },
    Token {
        token_type: While,
        start: 107,
        length: 5,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 113,
        length: 1,
        line: 10,
    },
    Token {
        token_type: LessEqual,
        start: 115,
        length: 2,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 118,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Colon,
        start: 119,
        length: 1,
        line: 10,
    },
    Token {
        token_type: NewLine,
        start: 120,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Indent,
        start: 121,
        length: 4,
        line: 11,
    },
    Token {
        token_type: Identifier,
        start: 125,
        length: 5,
        line: 11,
    },
    Token {
        token_type: LeftParen,
        start: 130,
        length: 1,
        line: 11,
    },
    Token {
        token_type: Identifier,
        start: 131,
        length: 1,
        line: 11,
    },
    Token {
        token_type: RightParen,
        start: 132,
        length: 1,
        line: 11,
    },
    Token {
        token_type: NewLine,
        start: 133,
        length: 1,
        line: 11,
    },
    Token {
        token_type: Var,
        start: 138,
        length: 3,
        line: 12,
    },
    Token {
        token_type: Identifier,
        start: 142,
        length: 4,
        line: 12,
    },
    Token {
        token_type: Equal,
        start: 147,
        length: 1,
        line: 12,
    },
    Token {
        token_type: Identifier,
        start: 149,
        length: 1,
        line: 12,
    },
    Token {
        token_type: Plus,
        start: 151,
        length: 1,
        line: 12,
    },
    Token {
        token_type: Identifier,
        start: 153,
        length: 1,
        line: 12,
    },
    Token {
        token_type: NewLine,
        start: 154,
        length: 1,
        line: 12,
    },
    Token {
        token_type: Identifier,
        start: 159,
        length: 1,
        line: 13,
    },
    Token {
        token_type: Equal,
        start: 161,
        length: 1,
        line: 13,
    },
    Token {
        token_type: Identifier,
        start: 163,
        length: 1,
        line: 13,
    },
    Token {
        token_type: NewLine,
        start: 164,
        length: 1,
        line: 13,
    },
    Token {
        token_type: Identifier,
        start: 169,
        length: 1,
        line: 14,
    },
    Token {
        token_type: Equal,
        start: 171,
        length: 1,
        line: 14,
    },
    Token {
        token_type: Identifier,
        start: 173,
        length: 4,
        line: 14,
    },
    Token {
        token_type: NewLine,
        start: 177,
        length: 1,
        line: 14,
    },
    Token {
        token_type: Identifier,
        start: 182,
        length: 1,
        line: 15,
    },
    Token {
        token_type: Equal,
        start: 184,
        length: 1,
        line: 15,
    },
    Token {
        token_type: Identifier,
        start: 186,
        length: 1,
        line: 15,
    },
    Token {
        token_type: Plus,
        start: 188,
        length: 1,
        line: 15,
    },
    Token {
        token_type: Number,
        start: 190,
        length: 1,
        line: 15,
    },
    Token {
        token_type: NewLine,
        start: 191,
        length: 0,
        line: 15,
    },
    Token {
        token_type: Dedent,
        start: 191,
        length: 0,
        line: 15,
    },
    Token {
        token_type: Eof,
        start: 191,
        length: 0,
        line: 15,
    },
]
