src/snapshots/gart__scanner__test__stress_counter_snapshot.snap
---
source: src/scanner.rs
expression: tokens
---
[
    Token {
        token_type: Var,
        start: 0,
        length: 3,
        line: 1,
    },
    Token {
        token_type: Identifier,
        start: 4,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Equal,
        start: 6,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Number,
        start: 8,
        length: 1,
        line: 1,
    },
    Token {
        token_type: NewLine,
        start: 9,
        length: 1,
        line: 1,
    },
    Token {
        token_type: Var,
        start: 10,
        length: 3,
        line: 2,
    },
    Token {
        token_type: Identifier,
        start: 14,
        length: 6,
        line: 2,
    },
    Token {
        token_type: Equal,
        start: 21,
        length: 1,
        line: 2,
    },
    Token {
        token_type: Number,
        start: 23,
        length: 6,
        line: 2,
    },
    Token {
        token_type: NewLine,
        start: 29,
        length: 1,
        line: 2,
    },
    Token {
        token_type: Var,
        start: 31,
        length: 3,
        line: 4,
    },
    Token {
        token_type: Identifier,
        start: 35,
        length: 5,
        line: 4,
    },
    Token {
        token_type: Equal,
        start: 41,
        length: 1,
        line: 4,
    },
    Token {
        token_type: Identifier,
        start: 43,
        length: 4,
        line: 4,
    },
    Token {
        token_type: LeftParen,
        start: 47,
        length: 1,
        line: 4,
    },
    Token {
        token_type: RightParen,
        start: 48,
        length: 1,
        line: 4,
    },
    Token {
        token_type: NewLine,
        start: 49,
        length: 1,
        line: 4,
    },
    Token {
        token_type: While,
        start: 51,
        length: 5,
        line: 6,
    },
    Token {
        token_type: Identifier,
        start: 57,
        length: 1,
        line: 6,
    },
    Token {
        token_type: LessEqual,
        start: 59,
        length: 2,
        line: 6,
    },
    Token {
        token_type: Identifier,
        start: 62,
        length: 6,
        line: 6,
    },
    Token {
        token_type: Colon,
        start: 68,
        length: 1,
        line: 6,
    },
    Token {
        token_type: NewLine,
        start: 69,
        length: 1,
        line: 6,
    },
    Token {
        token_type: Indent,
        start: 70,
        length: 4,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 74,
        length: 5,
        line: 7,
    },
    Token {
        token_type: LeftParen,
        start: 79,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 80,
        length: 1,
        line: 7,
    },
    Token {
        token_type: RightParen,
        start: 81,
        length: 1,
        line: 7,
    },
    Token {
        token_type: NewLine,
        start: 82,
        length: 1,
        line: 7,
    },
    Token {
        token_type: Identifier,
        start: 87,
        length: 1,
        line: 8,
    },
    Token {
        token_type: Equal,
        start: 89,
        length: 1,
        line: 8,
    },
    Token {
        token_type: Identifier,
        start: 91,
        length: 1,
        line: 8,
    },
    Token {
        token_type: Plus,
        start: 93,
        length: 1,
        line: 8,
    },
    Token {
        token_type: Number,
        start: 95,
        length: 1,
        line: 8,
    },
    Token {
        token_type: NewLine,
        start: 96,
        length: 1,
        line: 8,
    },
    Token {
        token_type: Dedent,
        start: 98,
        length: 0,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 98,
        length: 5,
        line: 10,
    },
    Token {
        token_type: LeftParen,
        start: 103,
        length: 1,
        line: 10,
    },
    Token {
        token_type: String,
        start: 104,
        length: 13,
        line: 10,
    },
    Token {
        token_type: Plus,
        start: 118,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 120,
        length: 6,
        line: 10,
    },
    Token {
        token_type: LeftParen,
        start: 126,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 127,
        length: 6,
        line: 10,
    },
    Token {
        token_type: RightParen,
        start: 133,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Plus,
        start: 135,
        length: 1,
        line: 10,
    },
    Token {
        token_type: String,
        start: 137,
        length: 6,
        line: 10,
    },
    Token {
        token_type: Plus,
        start: 144,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 146,
        length: 6,
        line: 10,
    },
    Token {
        token_type: LeftParen,
        start: 152,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 153,
        length: 4,
        line: 10,
    },
    Token {
        token_type: LeftParen,
        start: 157,
        length: 1,
        line: 10,
    },
    Token {
        token_type: RightParen,
        start: 158,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Minus,
        start: 160,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Identifier,
        start: 162,
        length: 5,
        line: 10,
    },
    Token {
        token_type: RightParen,
        start: 167,
        length: 1,
        line: 10,
    },
    Token {
        token_type: Plus,
        start: 169,
        length: 1,
        line: 10,
    },
    Token {
        token_type: String,
        start: 171,
        length: 11,
        line: 10,
    },
    Token {
        token_type: RightParen,
        start: 182,
        length: 1,
        line: 10,
    },
    Token {
        token_type: NewLine,
        start: 183,
        length: 0,
        line: 10,
    },
    Token {
        token_type: Eof,
        start: 183,
        length: 0,
        line: 10,
    },
]
